--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -50,6 +50,10 @@
                 <button class="btn btn-primary" id="acctLoaded" data-toggle="modal"
                     data-target="#acctModal">Manage Accounts Loaded</button>
             </div>
+<!-- table view -->
+            <div class="hidden" id="dataDiv">
+                
+            </div>
         </div>
     </div>
     <script src="public/scripts/main.js"></script>
