--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- modal -->
-    <div class="modal fade" id="acctModal">
+    <div class="modal fade" id="acct-modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -17,7 +17,7 @@
                     <h4 class="modal-title">Accounts Loaded</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" id="acctList"></form>
+                    <form class="form-horizontal" id="acct-list"></form>
                 </div>
             </div>
         </div>
@@ -33,25 +33,25 @@
         <div class="row row-content">
 <!-- status label -->
             <div class="col-xs-8 col-xs-offset-2">
-                <div class="alert alert-succss hidden" role="alert" id="acctAlert"></div>
-                <div id="statusProgress" class="hidden">
-                    <div id="statusBar">
-                        <div id="statusLabel"></div>
+                <div class="alert hidden" role="alert" id="acct-alert"></div>
+                <div id="status-bar-outer-div" class="hidden">
+                    <div id="status-bar-inner-div">
+                        <div id="status-label"></div>
                     </div>
                 </div>
             </div>
 <!-- main body -->
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
-                <input type="text" placeholder="Enter Acct #" id="acctIn"></input>
-                <button class="btn btn-primary" id="acctSub">Load Acct</button>
+                <input type="text" placeholder="Enter Acct #" id="acct-input"></input>
+                <button class="btn btn-primary" id="acct-submit">Load Acct</button>
             </div>
             
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
-                <button class="btn btn-primary" id="acctLoaded" data-toggle="modal"
-                    data-target="#acctModal">Manage Accounts Loaded</button>
+                <button class="btn btn-primary" id="acct-manage" data-toggle="modal"
+                    data-target="#acct-modal">Manage Accounts Loaded</button>
             </div>
 <!-- table view -->
-            <div class="hidden" id="dataDiv">
+            <div class="hidden" id="data-outer-div">
                 
             </div>
         </div>
@@ -59,7 +59,7 @@
     <script src="public/scripts/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="public/scripts/pubsub.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js" integrity="sha256-8E6QUcFg1KTnpEU8TFGhpTGHw5fJqB9vCms3OhAYLqw=" crossorigin="anonymous"></script>
+    <script src="node_modules/lodash/lodash.js"></script>
     <script src="public/scripts/piata.js"></script>
 </body>
 </html>
