more bug fixing

--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -34,8 +34,8 @@
 <!-- status label -->
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="alert hidden" role="alert" id="acct-alert"></div>
-                <div id="status-bar-outer-div" class="hidden">
-                    <div id="status-bar-inner-div">
+                <div id="status-outer-div" class="hidden">
+                    <div id="status-inner-div">
                         <div id="status-label"></div>
                     </div>
                 </div>
