--- a/src/styles/piata.css
+++ b/src/styles/piata.css
@@ -1,28 +1,7 @@
   div.alert {
     font-weight: bold;
-} span.label.label-danger {
-    margin-left: 50px;
-} form#acctList .acctListed,
-  form#acctList .acctListed .acctListed {
-    display: inline;
-} #statusProgress {
-  position: relative;
-  width: 100%;
-  height: 30px;
-  background-color: #f9f9f9;
-} #statusBar {
-  position: absolute;
-  width: 1%;
-  height: 100%;
-  background-color: #5cb85c;
-  z-index: 0;
-  margin-bottom: 20px;
-  margin-top: -10px;
-} #statusLabel {
-  text-align: center;
-  line-height: 30px;
-  color: white;
-  z-index: 1;
-} p.acct_listed {
-  display: inline;
+} div#acct-list > span.acct_listed > * {
+	display: inline;
+	margin-left: 10px;
+	margin-right; 10px;
 }
