--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -17,7 +17,9 @@
                     <h4 class="modal-title">Accounts Loaded</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal" id="acct-list"></form>
+                    <form>
+                        <div class="form-horizontal" id="acct-list"></div>
+                    </form>
                 </div>
             </div>
         </div>
