--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -13,7 +13,8 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal"
+                    aria-hidden="true">&times;</button>
                     <h4 class="modal-title">Accounts Loaded</h4>
                 </div>
                 <div class="modal-body">
@@ -30,17 +31,19 @@
             <h1 id="header">Pi ataGlance</h1>
         </div>
     </header>
-<!-- content -->
+<!-- content body -->
     <div class="content" id="acct-div">
         <div class="row row-content">
 <!-- status label -->
             <div class="col-xs-8 col-xs-offset-2">
                 <div class="alert hidden" role="alert" id="acct-alert"></div>
             </div>
-<!-- main body -->
+<!-- accts management -->
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
                 <input type="text" placeholder="Enter Acct #" class="acct-load" id="acct-input"></input>
-                <button class="btn btn-primary acct-load" id="acct-submit">Load Acct</button>
+                <button class="btn btn-primary acct-load" id="acct-submit">
+                    Load Acct
+                </button>
             </div>
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
                 <button class="btn btn-primary acct-load" id="acct-manage"
@@ -50,12 +53,12 @@
             </div>
         </div>
     </div>
-<!-- data -->
+<!-- view options -->
     <div class="content" id="view-div">
         <div class="row row-content">
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
                 <div class="col-xs-12 col-sm-6">
-                    <label class="view-options">Select Account: </label>
+                    <label>Select Account: </label>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <select id="acct-select"></select>
@@ -63,7 +66,7 @@
             </div>
             <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-2">
                 <div class="col-xs-12 col-sm-6">
-                    <label class="view-options">Select View: </label>
+                    <label>Select View: </label>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                     <select id="view-select"></select>
@@ -76,7 +79,12 @@
             </div>
         </div>
     </div>
-
+<!-- data -->
+    <div class="content" id="data-div">
+        <div class="row row-content">
+        </div>
+    </div>
+<!-- scripts -->
     <script src="public/scripts/main.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="public/scripts/pubsub.js"></script>
