render function failure

--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -30,7 +30,7 @@
 </script>
 <script id="acct-select-opts-tpl" type="text/x-handlebars-template">
     {{#each account}}
-            <option value="acct">{{account}}</option>
+            <option value="{{acct}}">{{account}}</option>
     {{/each}}
 </script>
 <!-- modal -->
