--- a/src/styles/piata.css
+++ b/src/styles/piata.css
@@ -10,4 +10,9 @@
 	margin-top: 20px;
 } .acct-load {
 	margin-bottom: 5px;
+} #view-div {
+	outline: solid #5d8ab1;
+	margin-top: 20px;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
