conflict table is rendering, needs styling

--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -39,20 +39,13 @@
     {{/each}}
 </script>
 <script id="data-table-conflicts" type="text/x-handlebars-template">
-    <table id="conflicts">
-        <tr class="header">
-            <th>file name</th>
-            <th>order / position</th>
-            <th>formula / condition</th>
+    {{#each entries}}
+        <tr>
+            <td>{{file}}</td>
+            <td>{{where}}</td>
+            <td>{{value}}</td>
         </tr>
-        {{#each entries}}
-            <tr>
-                <td>{{file}}</td>
-                <td>{{where}}</td>
-                <td>{{value}}</td>
-            </tr>
-        {{/each}}
-    </table>
+    {{/each}}
 </script>
 <!-- modal -->
     <div class="modal fade" id="acct-modal">
@@ -132,7 +125,15 @@
     </div>
 <!-- data -->
     <div class="content" id="data-div">
-        <div class="row row-content" id="table-div">
+        <div class="row row-content">
+            <table id="conflicts" class="hidden">
+                <tr class="header">
+                    <th>file name</th>
+                    <th>order / position</th>
+                    <th>formula / condition</th>
+                </tr>
+                <div id="table-div"></div>
+            </table>
         </div>
     </div>
 <!-- scripts -->
