--- a/views/piata.ejs
+++ b/views/piata.ejs
@@ -42,14 +42,16 @@
     <div  class="col-xs-10 col-xs-offset-1">
         <table id="conflicts" class="table table-condensed table-bordered">
             <tr class="header">
-                    <th>File name</th>
-                    <th>Order</th>
-                    <th>Formula / Condition</th>
+                    <th>Source</th>
+                    <th>Order / Location</th>
+                    <th>Variable / Description</th>
+                    <th>Condition</th>
             </tr>
             {{#each entries}}
                 <tr>
                         <td>{{file}}</td>
                         <td>{{where}}</td>
+                        <td>{{desc}}</td>
                         <td>{{value}}</td>
                 </tr>
             {{/each}}
