Revert "ordering table data is buggy"
This reverts commit e639f5869eb74514dfae6dd38e3461f1f0eac0de.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
                 <a type="button" href="/piata" class="btn btn-primary btn-lg">Pi ataGlance</a>
             </div>
             <div class="col-xs-4">
-                <button type="button" href="/rest" class="btn btn-primary btn-lg" >RestAPI</button>
+                <button type="button" class="btn btn-primary btn-lg" disabled >ssQuery</button>
             </div>
         </div>
 	</div>
