--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
                 <a type="button" href="/piata" class="btn btn-primary btn-lg">Pi ataGlance</a>
             </div>
             <div class="col-xs-4">
-                <button type="button" class="btn btn-primary btn-lg" disabled >ssQuery</button>
+                <button type="button" href="/restapi" class="btn btn-primary btn-lg">RestAPI Interface</button>
             </div>
         </div>
 	</div>
