--- a/views/restapi.ejs
+++ b/views/restapi.ejs
@@ -12,11 +12,15 @@
     </header>
     <div class="content">
         <div class="row row-content">
-            <div class="col-xs-11 col-xs-offset-1 col-lg-4 col-sm-offset-2">
-                <div class="col-xs-12 col-lg-6">
+            <div class="col-xs-11 col-xs-offset-1 col-sm-offset-2">
+                <div class="col-xs-12 col-sm-6">
+                    <input type="text" placeholder="Enter Acct #" class="acct-load" id="acct-input">
+                </div>
+                    </input>
+                <div class="col-xs-12 col-sm-3">
                     <label>Select Document: </label>
                 </div>
-                <div class="col-xs-12 col-lg-6">
+                <div class="col-xs-12 col-sm-3">
                     <select id="doc-select"></select>
                 </div>
             </div>
@@ -28,6 +32,7 @@
     <script src="public/scripts/pubsub.js"></script>
     <script src="node_modules/lodash/lodash.js"></script>
     <script src="public/scripts/restapi.js"></script>
+    <script src="public/scripts/render.js"></script>
 
 </body>
 </html>
