--- a/views/restapi.ejs
+++ b/views/restapi.ejs
@@ -40,12 +40,16 @@
                 </div>
             </div>
             <div class="col-xs-11 col-xs-offset-1 col-sm-offset-2">
-                <div class="col-xs-12 col-sm-6 interface">
+                <div class="col-xs-12 col-sm-6">
                     <button class="btn btn-primary" id="query-button">
                         Load Result
                     </button>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="content" id="data-div">
+        <div class="row row-content" id="table-div">
         </div>
     </div>
     <script src="public/scripts/main.js"></script>
